controller/pkg/agentgateway/plugins/testdata/backendpolicy/service-port-section-missing-not-attached.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-port
  namespace: default
spec:
  parentRefs:
    - name: test
  rules:
    - backendRefs:
        - name: svc-a
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-a
  namespace: default
spec:
  ports:
    - name: http
      port: 8080
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: agw
  namespace: default
spec:
  targetRefs:
    - kind: Service
      name: svc-a
      group: ""
      sectionName: "9999"
  backend:
    http:
      version: HTTP2

---
# Output
output: []
status:
- apiVersion: agentgateway.dev/v1alpha1
  kind: AgentgatewayPolicy
  metadata:
    name: agw
    namespace: default
  spec: null
  status:
    ancestors:
    - ancestorRef:
        group: agentgateway.dev
        name: StatusSummary
      conditions:
      - lastTransitionTime: fake
        message: Policy accepted
        reason: Valid
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: 'Policy is not attached: port 9999 not found in Service default/svc-a'
        reason: Pending
        status: "False"
        type: Attached
      controllerName: agentgateway.dev/agentgateway
